--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,18 @@
+attrs==20.2.0
 certifi==2020.6.20
+cffi==1.14.3
 click==7.1.2
 Flask==1.1.2
+Flask-Bcrypt==0.7.1
+Flask-PyMongo==2.3.0
 Flask-SocketIO==4.3.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+pycparser==2.20
+PyJWT==1.7.1
+pymongo==3.11.0
+pyrsistent==0.17.3
 python-engineio==3.13.2
 python-socketio==4.6.0
 six==1.15.0
