refator: Add app_test.py and move configutation outside of app.py

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       environment:
         MONGO_INITDB_ROOT_USERNAME: root
         MONGO_INITDB_ROOT_PASSWORD: changelater
+        MONGO_USER:
     mongo-express:
       image: mongo-express
       restart: always
