--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
     "develop": "vue-cli-service serve --mode dev --port 5000"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.4",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
